<resources>
    <string name="app_name">IPatient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="relative">Relative</string>
    <string name="appointments">Appointments</string>
    <string name="content">content</string>
    <string name="i_patient">I-Patient</string>
    <string name="no_data">No Data</string>
    <string name="copy_rights_reserved_2am">Copy Rights reserved @2AM</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account <font fgcolor='#c8a415'>Register now</font></string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="gender">Gender</string>
    <string name="telephone">Tel</string>
    <string name="email">Email</string>
    <string name="type">Type</string>
    <string name="birth_date">Birth Date</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string-array name="gender">
        <item id="male">Male</item>
        <item id="female">Female</item>
    </string-array>

    <string-array name="relative_degree">
        <item id="grand_father">Grand Father</item>
        <item id="grand_mother">Grand Mother</item>
        <item id="father">Farther</item>
        <item id="mother">Mother</item>
        <item id="uncle">Uncle</item>
        <item id="aunt">Aunt</item>
        <item id="brother">Brother</item>
        <item id="sister">Sister</item>
        <item id="cousin">Cousin</item>
    </string-array>
</resources>